@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty methods
hide empty attributes

class Company {
    -designation
}

class FreightNetwork {}

abstract class Location{
    -latitude
    -longitude
}

class Port {
    -name
    -latitude
    -longitude
    -country
    -continent
}

class Capital{
    -name
    -latitude
    -longitude
    -country
    -continent
}

class TrafficManager {}


Company "1" -- "1" FreightNetwork : knows >
Location <|-- Port
Location <|-- Capital
FreightNetwork "1" -- "1..*" Location : of >
TrafficManager "1..*" -- "1" FreightNetwork : manages >


@enduml